--- a/techprenure login.html
+++ b/techprenure login.html
@@ -15,8 +15,9 @@
                 <h1>TECH COMMUNITY</h1>
                 <P>Its time to go tech</P>
                 <span>
-                    <p>login with social media</p>
-                    <a href="https://www.facebook.com/profile.php?id=100091698737127&mibextid=ZbWKwL" class="fa fa-twitter" aria-hidden="true"></i> Login with Facebook</a>
+                    <p>Our social media Pages</p>
+                    <a href="https://www.facebook.com/profile.php?id=100091698737127&mibextid=ZbWKwL" class="fa fa-facebook" aria-hidden="true"></i> Login with Facebook</a>
+                    <a href="https://instagram.com/techpreneur___?igshid=YmMyMTA2M2Y=" class="fa fa-instagram" aria-hidden="true"></i> Login with instagram></a>
                     <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i> Login with Twitter</a>
                 </span>
             </div>
@@ -25,7 +26,7 @@
         <div class="right">        
             <div  class="Loginbox"> 
        
-                <h2>Login Here</h2>
+                <h2>REGISTRATION</h2>
                 <form>
                     <p> Name</p>
                     <input type="text" name="" placeholder="Full name">
@@ -35,7 +36,7 @@
                     <br>
                     <a href="#"> Don't have an email?</a>
                     <br>
-                    <input type="submit" name="" value="Login">
+                    <input type="submit" name="" value="Register">
                 </form>
                 
             </div> 
